# academic-editor

./: .dockerignore  .eslintignore  .eslintrc.js  .prettierignore  .prettierrc  Dockerfile  Taskfile.yml  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: icons.tsx  layout.tsx  providers.tsx  theme-provider.tsx
src/components/common/: about-app-dialog.tsx  album-artwork.tsx  error-boundary.tsx  menu.tsx  podcast-empty-placeholder.tsx  project-card.tsx  sidebar.tsx  wysiwyg-editor.tsx
src/components/pages/about/: about-layout.tsx
src/components/pages/documents/: documents-layout.tsx  projects-layout.tsx
src/components/pages/docx/: docx-layout.tsx
src/components/pages/index/: index-layout.tsx
src/components/pages/login/: login-layout.tsx  user-auth-form.tsx
src/components/pages/overleaf/: overleaf-layout.tsx
src/components/pages/pandoc/: pandoc-layout.tsx
src/components/pages/preferences/: preferences-layout.tsx  (+1 more)
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  hover-card.tsx  iconButton.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  sheet.tsx  slider.tsx  switch.tsx  table.tsx  toast.tsx  toggle.tsx
src/constants/: pages.ts  tauri.ts
src/locales/: ru.json
src/styles/: react-draft-wysiwyg.css
(+13 files in other folders)
