[package]
name = "academic-editor"
version = "0.0.1"
description = "AI powered academic editor"
authors = ["Valery Verkhoturov"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-hide", "window-start-dragging", "window-unminimize", "window-close", "window-show", "window-maximize", "window-unmaximize", "window-minimize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
